@@ -1092,12 +1092,13 @@
 
   <module id="gnome-menus">
     <maintainer id="vuntz"/>
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
   </module>
 
   <module id="gnome-mount">
