@@ -734,7 +734,7 @@
       <module id="gnome-icon-theme" branch="gnome-2-24"/>
       <module id="gnome-keyring"/>
       <module id="gnome-mag"/>
-      <module id="gnome-media"/>
+      <module id="gnome-media" branch="gnome-2-24"/>
       <module id="gnome-menus"/>
       <module id="gnome-netstatus"/>
       <module id="gnome-nettool"/>
