@@ -1,6 +1,11 @@
 2008-10-31  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
+	* releases.xml.in: gnome-media branched for GNOME 2.24.
+
+2008-10-31  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
 	* releases.xml.in: deskbar-applet branched for GNOME 2.24.
 
 2008-10-26  Gil Forcada  <gforcada@gnome.org>
